# lib3ds

examples/3dsplay/: 3dsplay.cpp  CMakeLists.txt
